refactor(language): use file extension provider